{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 658,
  "lineage": "11846908-da15-3245-7118-f83bfd2aa62b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:internet-gateway/igw-028590880c636681c",
            "id": "igw-028590880c636681c",
            "owner_id": "686811303427",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686811303427:loadbalancer/app/boards-lb/9e985e456499931a",
            "arn_suffix": "app/boards-lb/9e985e456499931a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "boards-lb-1886593442.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:686811303427:loadbalancer/app/boards-lb/9e985e456499931a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "boards-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02226db10a28eb5e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014a31d20dbd904b7"
              },
              {
                "subnet_id": "subnet-0cfdc521ed7ed1d11"
              },
              {
                "subnet_id": "subnet-0e04c9986e3ba9dec"
              }
            ],
            "subnets": [
              "subnet-014a31d20dbd904b7",
              "subnet-0cfdc521ed7ed1d11",
              "subnet-0e04c9986e3ba9dec"
            ],
            "tags": {
              "Name": "boards-lb"
            },
            "tags_all": {
              "Name": "boards-lb"
            },
            "vpc_id": "vpc-0a10c35496a7d0980",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686811303427:listener/app/boards-lb/9e985e456499931a/2b4f2ea81d24f747",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686811303427:targetgroup/boards-tg/34b1ea7ef68c23ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:686811303427:listener/app/boards-lb/9e985e456499931a/2b4f2ea81d24f747",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:686811303427:loadbalancer/app/boards-lb/9e985e456499931a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686811303427:targetgroup/boards-tg/34b1ea7ef68c23ed",
            "arn_suffix": "targetgroup/boards-tg/34b1ea7ef68c23ed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:686811303427:targetgroup/boards-tg/34b1ea7ef68c23ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "boards-tg",
            "port": 7777,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "boards-tg"
            },
            "tags_all": {
              "Name": "boards-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:route-table/rtb-0d4a25b7c7c683e34",
            "id": "rtb-0d4a25b7c7c683e34",
            "owner_id": "686811303427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028590880c636681c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:route-table/rtb-0731040084d0a7d83",
            "id": "rtb-0731040084d0a7d83",
            "owner_id": "686811303427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028590880c636681c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:route-table/rtb-06c65ed482bd7a37a",
            "id": "rtb-06c65ed482bd7a37a",
            "owner_id": "686811303427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028590880c636681c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route-table"
            },
            "tags_all": {
              "Name": "dev-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:route-table/rtb-016234666222eeb9a",
            "id": "rtb-016234666222eeb9a",
            "owner_id": "686811303427",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028590880c636681c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444d6346cef35a46",
            "route_table_id": "rtb-0d4a25b7c7c683e34",
            "subnet_id": "subnet-0d0f2b8c6a07227ae"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5abc2137843cf20",
            "route_table_id": "rtb-0731040084d0a7d83",
            "subnet_id": "subnet-092a2954825712db7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5a9eb1bc052cd76",
            "route_table_id": "rtb-06c65ed482bd7a37a",
            "subnet_id": "subnet-08a920b80624488ee"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de0935701b205fbb",
            "route_table_id": "rtb-016234666222eeb9a",
            "subnet_id": "subnet-014a31d20dbd904b7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06378b2ac94613be5",
            "route_table_id": "rtb-016234666222eeb9a",
            "subnet_id": "subnet-0e04c9986e3ba9dec"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05762991db1abba05",
            "route_table_id": "rtb-016234666222eeb9a",
            "subnet_id": "subnet-0cfdc521ed7ed1d11"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:security-group/sg-036e6fc4b33390535",
            "description": "security group for postgres db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036e6fc4b33390535",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "686811303427",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-db-sg"
            },
            "tags_all": {
              "Name": "dev-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:security-group/sg-03d3d7706a6d4ca9a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d3d7706a6d4ca9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02226db10a28eb5e9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7777,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02226db10a28eb5e9"
                ],
                "self": false,
                "to_port": 7777
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02226db10a28eb5e9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240811231904170200000001",
            "name_prefix": "terraform-",
            "owner_id": "686811303427",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-instance-sg"
            },
            "tags_all": {
              "Name": "dev-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:security-group/sg-02226db10a28eb5e9",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02226db10a28eb5e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load balancer",
            "name_prefix": "",
            "owner_id": "686811303427",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load balancer group"
            },
            "tags_all": {
              "Name": "load balancer group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:subnet/subnet-0d0f2b8c6a07227ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0f2b8c6a07227ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686811303427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-0"
            },
            "tags_all": {
              "Name": "dev-private-subnet-0"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:subnet/subnet-092a2954825712db7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a2954825712db7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686811303427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:subnet/subnet-08a920b80624488ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a920b80624488ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686811303427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:subnet/subnet-014a31d20dbd904b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a31d20dbd904b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686811303427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-0"
            },
            "tags_all": {
              "Name": "dev-public-subnet-0"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:subnet/subnet-0e04c9986e3ba9dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e04c9986e3ba9dec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686811303427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:subnet/subnet-0cfdc521ed7ed1d11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfdc521ed7ed1d11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686811303427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-0a10c35496a7d0980"
          },
          "dependencies": [
            "aws_vpc.vpc_tf",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686811303427:vpc/vpc-0a10c35496a7d0980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0dbc1898563345e",
            "default_route_table_id": "rtb-0302fde98d968a793",
            "default_security_group_id": "sg-04897cad2d596e5b2",
            "dhcp_options_id": "dopt-078889b8dc2e80eba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a10c35496a7d0980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0302fde98d968a793",
            "owner_id": "686811303427",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}